steady progress, fix collapse

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,22 +1,33 @@
 .nav-container {
   height: 55px;
+  max-width: 100vw;
 }
 
-.nav-about {
-  border: 1px solid rgba(100, 100, 100, 0.5);
+.nav-container * {
+  border: 1px solid red;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.nav-icons-container {
+  border-left: 1px solid rgba(100, 100, 100, 0.25);
+  border-right: 1px solid rgba(100, 100, 100, 0.25);
+  padding-left: 15px;
+  padding-right: 10px;
+  margin-right: 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-icon {
   margin-right: 10px;
-  border-radius: 5px;
-  box-sizing: border-box;
-}
-
-.nav-chat-icon {
-  margin-right: 10px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
-.dropdownMenu {
-  min-width: 0rem;
+  cursor: pointer;
 }
 
 .dropdown-toggle::after {
@@ -29,8 +40,4 @@
   margin-right: 5px;
 }
 
-.d-flex, .search-button {
-  height: 10px;
-  align-items: center;
-  font-size: 5px;
-}
+
